# notes

./: .gitignore  README.md  links  links.md  note  note.md  pragmatic_philosophy.md  programing_philosophy.md
c/: microInString.c  strftime.c
c/clock/: clock.c
c/demo/: gettime.c  packed.c  va.c
c/deque/: i.c  test_main.c
c/getopt_long/: Makefile  test
c/progress/: progress.c
c/thread/: mutex.c  semaphore.c  thread.c
compiler/calc/: Makefile  README.md  math.y  token.l
compiler/calc2/: Makefile  README.md  calc.c  calc.h  lexer.l  parser.y
console/: Makefile  console.c  console.h  test.c
cpp/: CostTime.hpp
date structure/: 2-3trees.md  rbtree.md
date structure/array/: array.c
date structure/rbtree/: Makefile  rbtree.c  rbtree.md
log/: .gitignore  CMakeLists.txt  Makefile  TODO  alog.c  alog.h  error.h  logging.c  logging.h
log/agent/: log_agent.c  log_agent.h  log_consumer.c  log_handler.c  log_hash.c
log/client/: client.c
log/doc/: TODO  asynclog.md
log/include/: alog.h  async_logger.h  asynclog.h  error.h  logging.h
log/lib/: CMakeLists.txt  async_logger.c  asynclog.c
log/script/: Dockerfile  restart.sh
ncurses/: keyboard.c  mouse.c  scanw.c  test.c
ncurses/countdown/: CMakeLists.txt  countdown.c
ncurses/p1/: CMakeLists.txt  test.c
network/: README.md  note
network/HTTP/: webservA_linux.c
network/chat/: chat_server.c
network/epoll_echo/: echo_client.c  echo_server.c
network/http_server/: http_server.c  http_server.h
network/multiProcess_tcp_echo/: echo_server.c
network/protocol/: README.md
network/rpc/: intro.md
network/standardIO/: tcp_client.c  tcp_server.c
nginx/dot/: array.dot  buf.dot  cycle.dot  event.dot  (+3 more)
protobuf/: CMakeLists.txt  main.cpp
protobuf/proto/: meta.proto
redis/: README.md
self discipline of a programmer/: link_load_lib.md
stl/: stl.md
tutorial/: how_to_build_grafana_with_docker.md  how_to_develop_a_new_product.md  init_ppa.md  sshpass_gpg_sendmail.md  ubuntu_server_ntp_time_sync.md  运动的正确顺序.md
unix/: README.md  apue.c  apue.h  memstream.c
wsl/: how_to_start_wsl2_at_windows_startup.md
(+94 files in other folders)
